# NVEA-Buffers

./: CMakeLists.txt  README.md  example.generated.cpp  example.generated.h  example.nveab
src/: buffer.c  buffer.h  main.c
src/Abstractiser/: cppgenerator.c  cppgenerator.h  lexer.c  lexer.h  struct.c  struct.h
